--- a/package.json
+++ b/package.json
@@ -6,23 +6,29 @@
     "start": "next start"
   },
   "dependencies": {
+    "@amcharts/amcharts5": "^5.13.3",
     "@neondatabase/serverless": "^0.9.5",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "20.17.6",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
     "@vercel/analytics": "^1.4.1",
     "autoprefixer": "^10.4.20",
+    "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.0.1",
     "drizzle-kit": "^0.22.8",
     "drizzle-orm": "^0.31.4",
     "drizzle-zod": "^0.5.1",
     "lucide-react": "^0.400.0",
+    "mysql2": "^3.14.1",
     "next": "15.1.3",
     "next-auth": "5.0.0-beta.25",
     "postcss": "^8.4.49",
@@ -34,6 +40,7 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
+    "tsx": "^4.20.3",
     "typescript": "5.7.2",
     "zod": "^3.24.1"
   },
@@ -44,4 +51,3 @@
     "trailingComma": "none"
   }
 }
-
