--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mysql2": "^3.14.1",
     "next": "15.1.3",
     "next-auth": "5.0.0-beta.25",
+    "ngrok": "5.0.0-beta.2",
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
     "prop-types": "^15.8.1",
